--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-14 # Sử dụng macOS mới nhất hỗ trợ .NET 8
+    runs-on: macos-14
     
     steps:
     - uses: actions/checkout@v4
@@ -21,27 +21,22 @@ jobs:
       run: dotnet workload install maui-ios
 
     - name: Publish App (Unsigned)
-      # Build ra file .app mà không cần ký chứng chỉ (vì dùng TrollStore)
+      # QUAN TRỌNG: Đã thêm đường dẫn "ioscado/ioscado.csproj" vào lệnh bên dưới
       run: |
-        dotnet publish -f net8.0-ios -c Release -p:ArchiveOnBuild=true -p:EnableCodeSigning=false -p:CodesignKey="-"
+        dotnet publish ioscado/ioscado.csproj -f net8.0-ios -c Release -p:ArchiveOnBuild=true -p:EnableCodeSigning=false -p:CodesignKey="-"
     
     - name: Create IPA for TrollStore
-      # TrollStore cần file .ipa, nên ta sẽ đóng gói thủ công từ file .app
       run: |
-        # 1. Tìm thư mục chứa file .app vừa build
-        cd bin/Release/net8.0-ios/ios-arm64/publish/
+        # 1. Tìm đúng thư mục chứa file .app (Lưu ý đường dẫn có thêm ioscado)
+        cd ioscado/bin/Release/net8.0-ios/ios-arm64/publish/
         
-        # 2. Tạo folder Payload (Bắt buộc phải tên là Payload)
+        # 2. Tạo folder Payload và đóng gói
         mkdir Payload
-        
-        # 3. Copy file .app vào trong Payload
         mv *.app Payload/
-        
-        # 4. Nén lại thành file .ipa
         zip -r ioscado.ipa Payload
         
-        # 5. Di chuyển file ipa ra ngoài để upload
-        mv ioscado.ipa ../../../../../
+        # 3. Di chuyển file ipa ra ngoài để upload
+        mv ioscado.ipa ../../../../../../
 
     - name: Upload IPA Artifact
       uses: actions/upload-artifact@v4
