--- a/.github/workflows/build-ioss.yml
+++ b/.github/workflows/build-ioss.yml
@@ -1,4 +1,4 @@
-name: Build ioscado IPA (iOS 17 Stable)
+name: Build ioscado IPA (Fix Trimmer)
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    # QUAY VỀ MACOS-14 (Chứa Xcode 15.4 - Tương thích tốt nhất iOS 17)
+    # Vẫn dùng macos-14 (Xcode 15.4) cho iOS 17
     runs-on: macos-14
     
     steps:
@@ -25,11 +25,11 @@ jobs:
       run: dotnet workload install maui
 
     - name: Publish App
-      # SỬA CHỮA:
-      # 1. Thêm -p:_SuppressSdkMismatch=true: Để ép .NET 8 chịu chạy trên Xcode 15.4 cũ hơn
-      # 2. Thêm -p:SupportedOSPlatformVersion=15.0: Để đảm bảo chạy được từ iOS 15 đến iOS 17
+      # SỬA CHỮA CHỐT HẠ:
+      # 1. XÓA: -p:PublishTrimmed=false (Vì gây lỗi vừa rồi)
+      # 2. ĐỔI THÀNH: -p:MtouchLink=None (Để tắt Linker, tránh lỗi thiếu file và lỗi iOS 18)
       run: |
-        dotnet publish ioscado/ioscado.csproj -f net8.0-ios -r ios-arm64 -c Release -p:ArchiveOnBuild=true -p:EnableCodeSigning=false -p:CodesignKey="-" -p:CheckEolTargetFramework=false -p:TargetFrameworks=net8.0-ios -p:PlatformTarget=arm64 -p:PublishTrimmed=false -p:MtouchLink=SdkOnly -p:_SuppressSdkMismatch=true -p:SupportedOSPlatformVersion=15.0
+        dotnet publish ioscado/ioscado.csproj -f net8.0-ios -r ios-arm64 -c Release -p:ArchiveOnBuild=true -p:EnableCodeSigning=false -p:CodesignKey="-" -p:CheckEolTargetFramework=false -p:TargetFrameworks=net8.0-ios -p:PlatformTarget=arm64 -p:_SuppressSdkMismatch=true -p:SupportedOSPlatformVersion=15.0 -p:MtouchLink=None
     
     - name: Create IPA
       run: |
