--- a/.github/workflows/build-ioss.yml
+++ b/.github/workflows/build-ioss.yml
@@ -1,4 +1,4 @@
-name: Build ioscado IPA (FINAL RESCUE)
+name: Build ioscado IPA (Auto Find)
 
 on:
   push:
@@ -7,7 +7,6 @@ on:
 
 jobs:
   build:
-    # 1. Bắt buộc dùng macOS 15 để có Xcode 16 (Thỏa mãn yêu cầu của Microsoft)
     runs-on: macos-15
     
     steps:
@@ -25,22 +24,39 @@ jobs:
       run: dotnet workload install maui
 
     - name: Publish App
-      # CÁC THAM SỐ QUAN TRỌNG:
-      # -p:SupportedOSPlatformVersion=14.0 -> Đảm bảo chạy tốt trên iOS 17, 16, 15, 14.
-      # -p:MtouchLink=None -> Tắt Linker để tránh lỗi thiếu file thư viện (chấp nhận file nặng hơn tí nhưng chắc ăn).
-      # -p:_SuppressSdkMismatch=true -> Bỏ qua các cảnh báo lệch version.
+      # SỬA QUAN TRỌNG:
+      # 1. Đổi ArchiveOnBuild=false (Để file .app hiện ra ngay thư mục publish)
+      # 2. Vẫn giữ MtouchLink=None và SupportedOSPlatformVersion=14.0
       run: |
-        dotnet publish ioscado/ioscado.csproj -f net8.0-ios -r ios-arm64 -c Release -p:ArchiveOnBuild=true -p:EnableCodeSigning=false -p:CodesignKey="-" -p:CheckEolTargetFramework=false -p:TargetFrameworks=net8.0-ios -p:PlatformTarget=arm64 -p:_SuppressSdkMismatch=true -p:SupportedOSPlatformVersion=14.0 -p:MtouchLink=None
+        dotnet publish ioscado/ioscado.csproj -f net8.0-ios -r ios-arm64 -c Release -p:ArchiveOnBuild=false -p:EnableCodeSigning=false -p:CodesignKey="-" -p:CheckEolTargetFramework=false -p:TargetFrameworks=net8.0-ios -p:PlatformTarget=arm64 -p:_SuppressSdkMismatch=true -p:SupportedOSPlatformVersion=14.0 -p:MtouchLink=None
     
-    - name: Create IPA
+    - name: Create IPA (Auto Search)
       run: |
-        cd ioscado/bin/Release/net8.0-ios/ios-arm64/publish/
+        # 1. Quay về thư mục gốc để tìm kiếm
+        cd ioscado
         
+        # 2. Dùng lệnh tìm kiếm file .app ở bất cứ đâu
+        echo "Dang tim file .app..."
+        APP_PATH=$(find . -name "*.app" -type d | head -n 1)
+        
+        if [ -z "$APP_PATH" ]; then
+          echo "LOI: Khong tim thay file .app nao ca!"
+          # Liệt kê file để debug xem nó nằm đâu
+          ls -R
+          exit 1
+        fi
+        
+        echo "Da tim thay app tai: $APP_PATH"
+        
+        # 3. Tạo Payload và copy file tìm được vào
         mkdir Payload
-        mv *.app Payload/
+        cp -r "$APP_PATH" Payload/
+        
+        # 4. Nén lại
         zip -r ioscado.ipa Payload
         
-        mv ioscado.ipa ../../../../../../
+        # 5. Di chuyển ra ngoài để upload
+        mv ioscado.ipa ../
 
     - name: Upload IPA
       uses: actions/upload-artifact@v4
